force-app/main/default/objects/Product2/fields/Flavour__c.field-meta.xml
<CustomField>
    <fullName>Flavour__c</fullName>
    <label>Flavour</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cappuccino</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Cookie</fullName>
            </value>
            <value>
                <fullName>Raspberry</fullName>
            </value>
            <value>
                <fullName>Salted Caramel</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
            <value>
                <fullName>Vanilla Ice Cream</fullName>
            </value>
            <value>
                <fullName>White chocolate</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Cola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>