force-app/main/default/objects/Product2/fields/Review_Average__c.field-meta.xml
<CustomField>
    <fullName>Review_Average__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Review Average</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>