force-app/main/default/objects/Product2/fields/Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Review Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>